tests/baselines/reference/computedPropertyNamesDeclarationEmit1_ES6(strict=true).errors.txt
computedPropertyNamesDeclarationEmit1_ES6.ts(4,9): error TS7032: Property '["" + ""]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNamesDeclarationEmit1_ES6.ts(4,19): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== computedPropertyNamesDeclarationEmit1_ES6.ts (2 errors) ====
    class C {
        ["" + ""]() { }
        get ["" + ""]() { return 0; }
        set ["" + ""](x) { }
            ~~~~~~~~~
!!! error TS7032: Property '["" + ""]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }